Add more colors, change default color to blue

--- a/src/theme.css
+++ b/src/theme.css
@@ -1,5 +1,5 @@
 :root {
-  --theme-color-selected: 251, 2, 168; /* Default pink color */
+  --theme-color-selected: 25, 60, 184;
 }
 
 /* Combined color and opacity classes */
